--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = "=0.99.9"
+#async-std = "=0.99.9"
+async-std = { git = "https://github.com/stjepang/async-std", branch = "fix-recursive-block_on" }
 futures-preview = "=0.3.0-alpha.19"
 tokio = "=0.2.0-alpha.6"
 env_logger = "0.6"
