--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#async-std = "=0.99.10"
-async-std = { git = "https://github.com/async-rs/async-std", branch = "master" }
+async-std = "1.0.1"
 futures-preview = "=0.3.0-alpha.19"
 #tokio = "=0.2.0-alpha.6"
 tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
